add problem-detail interface
