# router/app.go
@@ -21,9 +21,9 @@ func Router() *gin.Engine {
 	//// 公有方法
 	//// 问题
 	r.GET("/problem-list", service.GetProblemList)
-	//r.GET("/problem-detail", service.GetProblemDetail)
-	//// 用户
-	//r.GET("/user-detail", service.GetUserDetail)
+	r.GET("/problem-detail", service.GetProblemDetail)
+	// 用户
+	r.GET("/user-detail", service.GetUserDetail)
 	//r.POST("/login", service.Login)
 	//r.POST("/send-code", service.SendCode)
 	//r.POST("/register", service.Register)
