# service/problem.go
@@ -4,6 +4,7 @@ import (
 	"YourProjectName/define"
 	"YourProjectName/models"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 	"log"
 	"net/http"
 	"strconv"
@@ -15,6 +16,7 @@ import (
 // @Param page query int false "请输入当前页,默认第一页"
 // @Param size query int false "size"
 // @Param keyword query string false "keyword"
+// @Param category_identity query string false "category_identity"
 // @Success 200 {string} json "{"code":"200","data":""}"
 // @Router /problem-list [get]
 func GetProblemList(c *gin.Context) {
@@ -29,6 +31,8 @@ func GetProblemList(c *gin.Context) {
 	var count int64
 	//查询传进来的标题
 	keyword := c.Query("keyword")
+	categoryIdentity := c.Query("category_identity")
+
 	//categoryIdentity := c.Query("category_identity")
 
 	list := make([]*models.ProblemBasic, 0)
@@ -39,7 +43,7 @@ func GetProblemList(c *gin.Context) {
 	//}
 
 	//分页查询
-	err = models.GetProblemList(keyword).Offset(page).Limit(size).Find(&list).Error
+	err = models.GetProblemList(keyword, categoryIdentity).Count(&count).Offset(page).Limit(size).Find(&list).Error
 	if err != nil {
 		log.Println("Get Problem List Error:", err)
 		return
@@ -53,45 +57,45 @@ func GetProblemList(c *gin.Context) {
 	})
 }
 
-//
-//// GetProblemDetail
-//// @Tags 公共方法
-//// @Summary 问题详情
-//// @Param identity query string false "problem identity"
-//// @Success 200 {string} json "{"code":"200","data":""}"
-//// @Router /problem-detail [get]
-//func GetProblemDetail(c *gin.Context) {
-//	identity := c.Query("identity")
-//	if identity == "" {
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "问题唯一标识不能为空",
-//		})
-//		return
-//	}
-//	data := new(models.ProblemBasic)
-//	err := models.DB.Where("identity = ?", identity).
-//		Preload("ProblemCategories").Preload("ProblemCategories.CategoryBasic").
-//		First(&data).Error
-//	if err != nil {
-//		if err == gorm.ErrRecordNotFound {
-//			c.JSON(http.StatusOK, gin.H{
-//				"code": -1,
-//				"msg":  "问题不存在",
-//			})
-//			return
-//		}
-//		c.JSON(http.StatusOK, gin.H{
-//			"code": -1,
-//			"msg":  "Get ProblemDetail Error:" + err.Error(),
-//		})
-//		return
-//	}
-//	c.JSON(http.StatusOK, gin.H{
-//		"code": 200,
-//		"data": data,
-//	})
-//}
+// GetProblemDetail
+// @Tags 公共方法
+// @Summary 问题详情
+// @Param identity query string false "problem identity"
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /problem-detail [get]
+func GetProblemDetail(c *gin.Context) {
+	identity := c.Query("identity")
+	if identity == "" {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "问题唯一标识不能为空",
+		})
+		return
+	}
+	data := new(models.ProblemBasic)
+	err := models.DB.Where("identity = ?", identity).
+		Preload("ProblemCategories").Preload("ProblemCategories.CategoryBasic").
+		First(&data).Error
+	if err != nil {
+		if err == gorm.ErrRecordNotFound {
+			c.JSON(http.StatusOK, gin.H{
+				"code": -1,
+				"msg":  "问题不存在",
+			})
+			return
+		}
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Get ProblemDetail Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"data": data,
+	})
+}
+
 //
 //// ProblemCreate
 //// @Tags 管理员私有方法
